<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.marvel.domain.entity.ResultStatus" />

        <variable
            name="vm"
            type="com.marvel.presentation.view.detail.CharacterDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/characterDetailThumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main"
                android:text="@string/thumbnail"
                android:textColor="@color/sub"
                app:cornerRadius="15dp"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/characterDetailUrls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main"
                android:text="@string/urls"
                android:textColor="@color/sub"
                app:cornerRadius="15dp"
                app:layout_constraintTop_toBottomOf="@id/characterDetailThumbnail" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/characterDetailComics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main"
                android:text="@string/comics"
                android:textColor="@color/sub"
                app:cornerRadius="15dp"
                app:layout_constraintTop_toBottomOf="@id/characterDetailUrls" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/characterDetailStories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main"
                android:text="@string/stories"
                android:textColor="@color/sub"
                app:cornerRadius="15dp"
                app:layout_constraintTop_toBottomOf="@id/characterDetailComics" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/characterDetailEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main"
                android:text="@string/events"
                android:textColor="@color/sub"
                app:cornerRadius="15dp"
                app:layout_constraintTop_toBottomOf="@id/characterDetailStories" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/characterDetailSeries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main"
                android:text="@string/series"
                android:textColor="@color/sub"
                app:cornerRadius="15dp"
                app:layout_constraintTop_toBottomOf="@id/characterDetailEvents" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="@{null}"
            android:padding="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showProgressBar="@{vm.resultState instanceof ResultStatus.Loading}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
